--- a/tests/serialization/json/parser/CMakeLists.txt
+++ b/tests/serialization/json/parser/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(
   number_suite.cpp
   string_suite.cpp
   except_suite.cpp
+  space_suite.cpp
 )
 add_test(test_parser test_parser)
 
