--- a/tests/serialization/json/deser/CMakeLists.txt
+++ b/tests/serialization/json/deser/CMakeLists.txt
@@ -2,8 +2,9 @@ add_executable(
   test_deserializer
   ${CMAKE_SOURCE_DIR}/faslib/fas/testing/testing.cpp
   test_deserializer.cpp
-  number_suite.cpp
-  except_suite.cpp
+  deser_suite.cpp
+  #number_suite.cpp
+  #except_suite.cpp
 )
 add_test(test_deserializer test_deserializer)
 
