--- a/tests/serialization/json/deser/CMakeLists.txt
+++ b/tests/serialization/json/deser/CMakeLists.txt
@@ -3,8 +3,8 @@ add_executable(
   ${CMAKE_SOURCE_DIR}/faslib/fas/testing/testing.cpp
   test_deserializer.cpp
   deser_suite.cpp
-  #number_suite.cpp
-  #except_suite.cpp
+  number_suite.cpp
+  except_suite.cpp
 )
 add_test(test_deserializer test_deserializer)
 
