--- a/tests/serialization/json/deser/CMakeLists.txt
+++ b/tests/serialization/json/deser/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(
   ${CMAKE_SOURCE_DIR}/faslib/fas/testing/testing.cpp
   test_deserializer.cpp
   deser_suite.cpp
+  object_suite.cpp
   number_suite.cpp
   except_suite.cpp
 )
